Bug fix on mobile

--- a/src/app/welcome-page/welcome-page.scss
+++ b/src/app/welcome-page/welcome-page.scss
@@ -248,7 +248,6 @@
 
   .featured-posters {
     display: flex;
-    overflow: hidden;
     gap: 0;
     justify-content: center;
     align-items: center;
