--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,7 +8,6 @@
 
 html {
   height: 100%;
-  overflow: hidden;
   @include mat.theme((
     color: (
       primary: mat.$blue-palette,
@@ -31,7 +30,6 @@ body {
   // Reset the user agent margin.
   margin: 0;
   height: 100%;
-  overflow: hidden;
 }
 
 /* You can add global styles to this file, and also import other style files */
